err/utility-helper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/utility_helper-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/utilityhelper'...
Listing './lib/python3.5/site-packages/utilityhelper/common'...
Compiling './lib/python3.5/site-packages/utilityhelper/common/HelperDecorator.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/common/HelperDecorator.py", line 19
    print "@%s, {%s} start" % (time.strftime("%X", time.localtime()), func.__name__)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/utilityhelper/common/HelperMagic.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/common/HelperMagic.py", line 28
    print f
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/utilityhelper/common/util'...
Listing './lib/python3.5/site-packages/utilityhelper/common/util/CertUil'...
Compiling './lib/python3.5/site-packages/utilityhelper/common/util/DBUtil.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/common/util/DBUtil.py", line 42
    print "self._conn=", self._conn
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/utilityhelper/common/util/crc'...
Compiling './lib/python3.5/site-packages/utilityhelper/common/util/crc/crc-itu.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/common/util/crc/crc-itu.py", line 110
    print hex(crc), bytearray(crc)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/utilityhelper/loggingHelper.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/loggingHelper.py", line 223
    print "logger=", log, "logger.handers=", log.handlers
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/utilityhelper/wxext'...
Compiling './lib/python3.5/site-packages/utilityhelper/wxext/HelperPropertyGrid.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/wxext/HelperPropertyGrid.py", line 871
    exec dlg.tc.GetValue() in sandbox
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/utilityhelper/wxext/HelperTreeCtrl.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/wxext/HelperTreeCtrl.py", line 45
    print "************search [", strparent, "] from root!!!!"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/utilityhelper/wxext/myGrid.py'...
***   File "./lib/python3.5/site-packages/utilityhelper/wxext/myGrid.py", line 44
    print "OnCellLeftClick: (%d,%d) %s\n" %(evt.GetRow(), evt.GetCol(), evt.GetPosition())
                                        ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
